[package]
rust-version = "1.73"
name = "armventure"
version = "0.1.0"
edition = "2021"
include = ["/src/**/*"]

[dependencies]
bounded-integer = { version = "0.5.7", features = [
    "types",
    "num-traits02",
    "zerocopy06",
] }
bumpalo = { version = "3.13.0", features = ["collections"] }
displaydoc = "0.2.4"
enum_variant_type = "0.3.1"
enumflags2 = "0.7.7"
impls = "1.0.3"
paste = "1.0.14"
smallvec = { version = "1.11.0", features = [
    "union",
    "const_generics",
    "const_new",
] }
subenum = "1.0.1"
thiserror = "1.0.43"
typed-arena = "2.0.2"
adt = { version = "*", path = "crates/adt" }
keywrd = { version = "*", path = "crates/keywrd" }
lasso = "0.7.2"
rustc-hash = { version = "*" }

[workspace]
members = ["crates/adt", "crates/keywrd"]
