[package]
name = "adt_internal_macros"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adt_internal_items = { version = "*", path = "./../adt_internal_items" }

[lib]
proc_macro = true
